<!-- res/menu/drawer_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/availableEventsFragment"
            android:icon="@drawable/calendar_today_24px"
            android:title="@string/events" />
        <item
            android:id="@+id/lotteryGuidelines"
            android:icon="@drawable/baseline_fact_check_24"
            android:title="@string/lottery_guidelines" />
        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/notifications" />
        <item
            android:id="@+id/qrScannerFragment"
            android:icon="@drawable/qr_code_scanner_24px"
            android:title="@string/scan_a_qr_code" />

        <!-- Admin-only Options -->
        <item
            android:id="@+id/adminEventsFragment"
            android:icon="@drawable/edit_calendar_24px"
            android:title="@string/admin_events"
            android:visible="false" />
        <item
            android:id="@+id/adminProfilesFragment"
            android:icon="@drawable/groups_24px"
            android:title="@string/profiles"
            android:visible="false" />
        <item
            android:id="@+id/adminImagesFragment"
            android:icon="@drawable/photo_library_24px"
            android:title="@string/images"
            android:visible="false" />
        <item
            android:id="@+id/adminSentNotificationsFragment"
            android:icon="@drawable/send_24px"
            android:title="@string/sent_notifications"
            android:visible="false" />

    </group>
</menu>