<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:id="@+id/image_view_qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/qr_code_for_event_info_page" />

    <!-- Spacer -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dialog_save"
            style="@style/PinkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/save"/>

        <Button
            android:id="@+id/button_dialog_share"
            style="@style/PinkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share" />

    </LinearLayout>

    <Button
        android:id="@+id/button_dialog_close"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/close" />

</LinearLayout>
