<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

<!--    <TextView-->
<!--        android:id="@+id/event_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Event Name"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        tools:ignore="HardcodedText" />-->

    <TextView
        android:id="@+id/waiting_list"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Waiting List:"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/waiting_list_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/loading"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="12dp"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/available_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spots Available:"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/available_space_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="64dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/draw_successful_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Draw Successful!"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/selected_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Users Selected:"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/selected_users_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of participants selected"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="84dp"
        tools:ignore="HardcodedText" />

    <ProgressBar
        android:id="@+id/bottom_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_info_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:text="Informational message here." />

    <LinearLayout
        android:id="@+id/button_actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/confirm_and_notify_button"
            android:text="@string/confirm_and_notify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F48FB1"
            android:layout_gravity="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F48FB1"
            android:text="@string/cancel_button"
            android:layout_gravity="center"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>